Fixed casousel alignment.

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  padding: 30px 50px 20px 50px;
+  /* padding: 30px 50px 20px 50px; */
   box-sizing: border-box;
   align-items: center;
 }
